--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@sentry/cli": "^1.49.0",
+    "@sentry/react": "^5.19.0",
     "history": "^1.17.0",
     "material-ui": "^0.18.7",
     "react": "^15.6.2",
